--- a/src/css/Popup.css
+++ b/src/css/Popup.css
@@ -86,4 +86,9 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
 }
